hphp/hack/test/sound_dynamic/typing/variadic_argument_1.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

function f_tuple((int, int) $t) : void {}

<<__SupportDynamicType>>
class C {
  public function foo((int, int) ...$x) : void {
    f_tuple($x[0]);
  }
}
